Task: Layout bugfixes on tiny browser windows.

--- a/www/style.css
+++ b/www/style.css
@@ -10,6 +10,7 @@
 
 body {
     font-family: "Arial", sans-serif;
+    padding-bottom: 200px;
     /*
     background-color: RGB(249 244 222);
      */
@@ -40,8 +41,8 @@ header {
 footer {
     position: fixed;
     min-width: 360px;
+    padding-right: 150px !important;
 }
-
 
 .title {
     width: 96vw;
